post card spacing fix

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -5,9 +5,11 @@
     }
 
     &-list-item {
-        padding-top: $spacing-unit;
+        padding-top: $spacing-unit / 2;
         padding-bottom: $spacing-unit;
         border-bottom: 1px dotted $gray-color;
+        margin-bottom: $spacing-unit / 2;
+        margin-top: $spacing-unit / 2;
     }
 
     &-title {
@@ -24,10 +26,12 @@
         }
 
         &:hover {
-            color: $accent-color;
-            font-weight: 400;
-
             .post-link {
+                color: $accent-color;
+                font-weight: 400;
+            }
+
+            .post-meta {
                 color: $accent-color;
             }
 
@@ -50,16 +54,16 @@
             padding: 1em;
         }
 
-        &:hover {
-            color: $accent-color;
-            font-weight: 400;
+        &-link {
+            &:hover {
+                .post-link {
+                    color: $accent-color;
+                    font-weight: 400;
+                }
 
-            .post-link {
-                color: $accent-color;
-            }
-
-            .post-list-item {
-                border: 1px dotted $accent-color;
+                .post-list-item {
+                    border: 1px dotted $accent-color;
+                }
             }
         }
     }
